
from attr import dataclass


@dataclass
class UserDTO:
    user_id: str
    user_name: str
